# docs/swagger.yaml
@@ -23,13 +23,13 @@ definitions:
       deletedAt:
         type: string
       group_id:
-        type: string
+        type: integer
       group_name:
         type: string
       id:
         type: integer
       organization_id:
-        type: string
+        type: integer
       organization_name:
         type: string
       publisher_id:
@@ -42,7 +42,7 @@ definitions:
       announcement:
         type: string
       announcement_id:
-        type: string
+        type: integer
       createdAt:
         type: string
       deletedAt:
@@ -53,6 +53,8 @@ definitions:
         type: string
       updatedAt:
         type: string
+    required:
+    - announcement_id
     type: object
   model.FollowingOrganization:
     properties:
@@ -63,7 +65,7 @@ definitions:
       id:
         type: integer
       organization_id:
-        type: string
+        type: integer
       organization_name:
         type: string
       student_id:
@@ -71,7 +73,7 @@ definitions:
       updatedAt:
         type: string
     type: object
-  model.Group:
+  model.Grouping:
     properties:
       createdAt:
         type: string
@@ -82,11 +84,13 @@ definitions:
       id:
         type: integer
       organization_id:
-        type: string
+        type: integer
       organization_name:
         type: string
       updatedAt:
         type: string
+    required:
+    - organization_name
     type: object
   model.Organization:
     properties:
@@ -106,6 +110,8 @@ definitions:
         type: string
       updatedAt:
         type: string
+    required:
+    - organization_name
     type: object
   model.User:
     properties:
@@ -125,6 +131,9 @@ definitions:
         type: string
       updatedAt:
         type: string
+    required:
+    - password
+    - student_id
     type: object
   sql.NullString:
     properties:
@@ -144,7 +153,7 @@ info:
   title: BlackBoard API
   version: 1.0.0
 paths:
-  /api/v1/announcement:
+  /announcement:
     get:
       consumes:
       - application/json
@@ -175,7 +184,7 @@ paths:
       summary: 查看通知
       tags:
       - announcement
-  /api/v1/announcement/collect:
+  /announcement/collect:
     post:
       consumes:
       - application/json
@@ -210,7 +219,7 @@ paths:
       summary: 收藏通知
       tags:
       - announcement
-  /api/v1/announcement/collect/cancel:
+  /announcement/collect/cancel:
     delete:
       consumes:
       - application/json
@@ -239,7 +248,7 @@ paths:
       summary: 取消收藏
       tags:
       - announcement
-  /api/v1/announcement/create_group:
+  /announcement/create_group:
     post:
       consumes:
       - application/json
@@ -254,7 +263,7 @@ paths:
         in: body
         name: group
         schema:
-          $ref: '#/definitions/model.Group'
+          $ref: '#/definitions/model.Grouping'
       produces:
       - application/json
       responses:
@@ -262,7 +271,7 @@ paths:
           description: '{"msg":"创建成功"}'
           schema:
             items:
-              $ref: '#/definitions/model.Group'
+              $ref: '#/definitions/model.Grouping'
             type: array
         "400":
           description: Bad Request
@@ -275,7 +284,7 @@ paths:
       summary: 创建分组
       tags:
       - announcement
-  /api/v1/announcement/delete:
+  /announcement/delete:
     delete:
       consumes:
       - application/json
@@ -315,7 +324,7 @@ paths:
       summary: 删除通知
       tags:
       - announcement
-  /api/v1/announcement/publish:
+  /announcement/publish:
     post:
       consumes:
       - application/json
@@ -356,7 +365,7 @@ paths:
       summary: 发布通知
       tags:
       - announcement
-  /api/v1/login:
+  /login:
     post:
       description: 一站式登录
       parameters:
@@ -390,7 +399,7 @@ paths:
       summary: 登录
       tags:
       - user
-  /api/v1/organization/create:
+  /organization/create:
     post:
       consumes:
       - application/json
@@ -418,7 +427,7 @@ paths:
       summary: 新建组织
       tags:
       - organization
-  /api/v1/organization/personal/created:
+  /organization/personal/created:
     get:
       consumes:
       - application/json
@@ -449,7 +458,7 @@ paths:
       summary: 查看创建
       tags:
       - organization
-  /api/v1/organization/personal/follow:
+  /organization/personal/follow:
     post:
       consumes:
       - application/json
@@ -476,7 +485,7 @@ paths:
       summary: 关注组织
       tags:
       - organization
-  /api/v1/organization/personal/following:
+  /organization/personal/following:
     get:
       consumes:
       - application/json
@@ -508,37 +517,7 @@ paths:
       summary: 查看关注
       tags:
       - organization
-  /api/v1/user/Info:
-    get:
-      consumes:
-      - application/json
-      description: 获取用户信息
-      parameters:
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"msg":"获取成功"}'
-          schema:
-            $ref: '#/definitions/model.User'
-        "400":
-          description: '{"error_code":"20001", "message":"Fail."} or {"error_code":"00002",
-            "message":"Lack Param Or Param Not Satisfiable."}'
-          schema:
-            $ref: '#/definitions/errno.Errno'
-        "500":
-          description: '{"error_code":"30001", "message":"Fail."} 失败'
-          schema:
-            $ref: '#/definitions/errno.Errno'
-      summary: 用户信息
-      tags:
-      - user
-  /api/v1/user/changename:
+  /user/changename:
     put:
       consumes:
       - application/json
@@ -574,7 +553,7 @@ paths:
       summary: 修改用户名
       tags:
       - user
-  /api/v1/user/colletion:
+  /user/colletion:
     get:
       consumes:
       - application/json
@@ -602,7 +581,7 @@ paths:
       summary: 查看用户收藏
       tags:
       - user
-  /api/v1/user/profile:
+  /user/profile:
     post:
       consumes:
       - application/json
@@ -630,7 +609,7 @@ paths:
       summary: 修改头像
       tags:
       - user
-  /api/v1/user/publisher:
+  /user/publisher:
     get:
       consumes:
       - application/json
